--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -828,9 +828,11 @@ textarea.input-bg {background-color: #f7f7f7; border-radius: 4px; border: 1px so
 .margin-25px-bottom {margin-bottom:25px}
 .margin-30px-bottom {margin-bottom:30px}
 .margin-35px-bottom {margin-bottom:35px}
+.margin-38px-bottom {margin-bottom:38px}
 .margin-40px-bottom {margin-bottom:40px}
 .margin-45px-bottom {margin-bottom:45px}
 .margin-50px-bottom {margin-bottom:50px}
+.margin-52px-bottom {margin-bottom:52px}
 .margin-55px-bottom {margin-bottom:55px}
 .margin-60px-bottom {margin-bottom:60px}
 .margin-65px-bottom {margin-bottom:65px}
@@ -2788,7 +2790,7 @@ header.sticky nav.navbar.brand-center ul.nav > li > a {padding: 20px; margin: 0 
 .swiper-auto-slide .swiper-slide.swiper-slide-active span {opacity: 1; transition: all 0.5s ease-in-out; -webkit-transition: all 0.5s ease-in-out; -moz-transition: all 0.5s ease-in-out; -ms-transition: all 0.5s ease-in-out; -o-transition: all 0.5s ease-in-out;}
 
 /* arrow pagination black and white */
-.swiper-button-next, .swiper-container-rtl .swiper-button-prev { background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.12.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23b60c2f'%2F%3E%3C%2Fsvg%3E")!important; right: 10px; left: auto; }
+.swiper-button-next, .swiper-container-rtl .swiper-button-prev { background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23b60c2f'%2F%3E%3C%2Fsvg%3E")!important; right: 10px; left: auto; }
 .swiper-button-prev { background-image: url("data:image/svg+xml;charset=utf-8,<svg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'><path%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23b60c2f'%2F><%2Fsvg>")!important; }
 .swiper-button-prev.swiper-button-white, .swiper-container-rtl .swiper-button-next.swiper-button-white {background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23ffffff'%2F%3E%3C%2Fsvg%3E");}
 .swiper-button-next.swiper-button-white, .swiper-container-rtl .swiper-button-prev.swiper-button-white { background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23ffffff'%2F%3E%3C%2Fsvg%3E"); }
@@ -4254,6 +4256,8 @@ a.btn-news-literature:hover{
 }
 
 
+.bread-crumb p {font-size: 13px;}
+.bread-crumb-about-us-home p {font-size: 13px;}
 
 .bread-crumb {padding: 20px 30px 0px 85px;}
 /* .bread-crumb-about-us-home{padding: 20px 30px 0px 113px;} */
@@ -4879,7 +4883,7 @@ a.btn-news-literature:hover{
     font-weight: 400;
     width: 175px;
 }
-.more-btn:hover{background:  #9ec5d9 url('../images/buttons-new/buttons_more.png') no-repeat right;}
+.more-btn:hover{background:  #9ec5d9 url('../images/arrow-icon-hover.jpg') no-repeat; background-position: 104% 50%;}
 
 .main-slider-btn {
     padding: 11px 80px 11px 20px;
